# HexaPong

./: CMakeLists.txt  Classes.dia  Functions.dia  brainstorming.txt
assets/levels/: level.xml
cmake/: FindRapidXML.cmake
src/: Ball.cpp  Ball.h  Block.cpp  Block.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Hexagon.cpp  Hexagon.h  Item.cpp  Item.h  Level.cpp  Level.h  LevelBorder.cpp  LevelBorder.h  Math.cpp  Math.h  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  main.cpp
src/engine/: Math.cpp  Physics.h
src/game/: Entity.cpp  Entity.h  EntityManager.cpp  EntityType.h  ItemType.h  Level.cpp  Level.h
src/game/entities/: Ball.h  Block.h  Hexagon.h  Item.cpp  Item.h  LevelBorder.h  Paddle.h
